--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,25 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  dio: ^5.1.1
+  google_fonts: ^4.0.3
+  flutter_screenutil: ^5.7.0
+  get: ^4.6.5
+  persian_number_utility: ^1.1.3
+  http: ^0.13.5
+  image_picker: ^0.8.7+1
+  material_color_gen: ^2.0.0
+  percent_indicator: ^4.2.3
+  shamsi_date: ^1.0.1
+  open_file: ^3.2.1
+  universal_html: ^2.2.1
+  cached_network_image: ^3.2.3
+  flutter_spinkit: ^5.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,7 +60,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -62,6 +77,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo.png
+    - assets/Tick.png
+    - assets/zabdar.png
+    - assets/restarauntLogo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -86,5 +106,13 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: IranSansWeb
+      fonts:
+        - asset: fonts/IRANSansWeb(FaNum).ttf
+
+    - family: FugazOne
+      fonts:
+        - asset: fonts/FugazOne-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
