feat(develop) : add WhiteLogo.png

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/Tick.png
     - assets/zabdar.png
     - assets/restarauntLogo.png
+    - assets/logo_white.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
