--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/logo_black.png
+    - assets/rating.png
     - assets/logo.png
     - assets/Tick.png
     - assets/zabdar.png
