--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_rating_bar: 4.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -77,6 +79,14 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  fonts:
+    - family: IranSansWeb
+      fonts:
+        - asset: fonts/IRANSansWeb(FaNum).ttf
+
+    - family: FugazOne
+      fonts:
+        - asset: fonts/FugazOne-Regular.ttf
   assets:
     - assets/logo_black.png
     - assets/rating.png
@@ -86,36 +96,6 @@ flutter:
     - assets/restarauntLogo.png
     - assets/logo_white.png
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  fonts:
-    - family: IranSansWeb
-      fonts:
-        - asset: fonts/IRANSansWeb(FaNum).ttf
-
-    - family: FugazOne
-      fonts:
-        - asset: fonts/FugazOne-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
