feat(CommentPage) : Add successful commented pic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/logo_black.png
     - assets/logo.png
     - assets/Tick.png
+    - assets/tick2.png
     - assets/zabdar.png
     - assets/restarauntLogo.png
     - assets/logo_white.png
