--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  pin_code_fields: ^7.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
