--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.2
   cupertino_icons: ^1.0.2
   dio: ^5.1.1
   google_fonts: ^4.0.3
