--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   flutter_spinkit: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  qr_code_scanner: ^1.0.1
+  permission_handler: ^10.2.0
+  url_launcher: ^6.1.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
