--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  socket_io_client: ^2.0.0-beta.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
